--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Astrolab</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="astrolab.ico">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C026BYP29M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C026BYP29M');
+</script>
 </head>
 <body>
     <header>
